--- a/app/assets/stylesheets/components/navbar.scss
+++ b/app/assets/stylesheets/components/navbar.scss
@@ -9,10 +9,10 @@
   position: fixed;
   display: flex;
   width: 100%;
+  height: 80px;
   padding: 0;
   flex-direction: column;
   top: 0;
-  z-index: 1;
   transition: 0.3s;
   color: #f2f2f2;
 }
@@ -29,8 +29,9 @@
   position: fixed;
 }
 .navbar-expanded {
-  background-color: rgba(250, 248, 248, 0.9);
-  height: 544px;
+  z-index: 2;
+  background-color: #A33829;
+  height: 90vh;
 }
 
 .navbar-expanded .navbar-logo {
@@ -41,6 +42,7 @@
   padding-left: 2rem;
   width: 100%;
   justify-content: space-between;
+  text-align: center;
 }
 
 .navbar-logo h4 {
@@ -61,6 +63,7 @@
 }
 
 .navigation {
+  z-index: 3;
   color: #f2f2f2;
   display: flex;
   flex-direction: column;
@@ -71,8 +74,19 @@
 }
 
 .navigation-active {
+  justify-content: space-around;
+  width: 100%;
   flex-grow: 1;
   top: 0vh;
+  z-index: 3;
+  padding-top: 2rem;
+  .navbar-item {
+    padding: 10% 0;
+  }
+}
+
+.navbar a:hover {
+  background-color: rgba(40, 40, 40, 0.1);
 }
 
 @media (min-width: 992px) {
@@ -96,11 +110,6 @@
     padding: 0.5rem 1rem;
     display: flex;
     align-items: center;
-  }
-
-  .navbar a:hover {
-    text-shadow: 1px 1px 2px #d7d7d7;
-    background-color: rgba(40, 40, 40, 0.1);
   }
 
   .navbar-item {
